--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.7.4</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>example</finalName>
