--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,20 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.3.4.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>example</finalName>
